--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://d102da66-b2d4-4149-88e6-13f6caeb32fb.preview.emergentagent.com
 WDS_SOCKET_PORT=443
